# e-pegboard

./: .gitignore  LICENSE  dune-project  dune-workspace  pegboard.opam
.github/workflows/: release.yml
lib/: add_guest.ml  add_guest.mli  app.ml  app.mli  colours.ml  colours.mli  components.ml  components.mli  court.ml  court.mli  dune  game_chooser.ml  game_chooser.mli  pegboard.ml  pegboard.mli  player.ml  player.mli  player_database.ml  player_database.mli
